prebuilding inside cmake directly

--- a/tutorial/710_SCAF/CMakeLists.txt
+++ b/tutorial/710_SCAF/CMakeLists.txt
@@ -5,7 +5,7 @@ add_executable(${PROJECT_NAME}_bin main.cpp)
 
 if(LIBIGL_WITH_MMG)
   target_link_libraries(${PROJECT_NAME}_bin igl::core igl::opengl igl::opengl_glfw igl::mmg tutorials)
-  igl_copy_mmg_dll(${PROJECT_NAME}_bin)
+#   igl_copy_mmg_dll(${PROJECT_NAME}_bin)
 else()
   target_link_libraries(${PROJECT_NAME}_bin igl::core igl::opengl igl::opengl_glfw igl::triangle tutorials)
 endif()
