--- a/tutorial/CMakeLists.txt
+++ b/tutorial/CMakeLists.txt
@@ -5,7 +5,8 @@ project(libigl_tutorials)
 list(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/../cmake)
 
 ### Compile libigl in header-only mode for Python bindings
-option(LIBIGL_USE_STATIC_LIBRARY "Use LibIGL as static library" ON)
+# FIXME: removed
+# option(LIBIGL_USE_STATIC_LIBRARY "Use LibIGL as static library" ON)
 
 ### Adding libIGL: choose the path to your local copy libIGL
 if(NOT TARGET igl_common)
