fixing tutorial build

--- a/tutorial/CMakeLists.txt
+++ b/tutorial/CMakeLists.txt
@@ -5,8 +5,7 @@ project(libigl_tutorials)
 list(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/../cmake)
 
 ### Compile libigl in header-only mode for Python bindings
-# FIXME: removed. why forcing static builds?
-# option(LIBIGL_USE_STATIC_LIBRARY "Use LibIGL as static library" ON)
+option(LIBIGL_USE_STATIC_LIBRARY "Use LibIGL as static library" ON)
 
 ### Adding libIGL: choose the path to your local copy libIGL
 if(NOT TARGET igl_common)
@@ -136,28 +135,25 @@ endif()
 
 # Chapter 7
 if(TUTORIALS_CHAPTER7)
-#   add_subdirectory("701_Statistics")
-#   add_subdirectory("702_WindingNumber")
-#   add_subdirectory("703_Decimation")
-#   add_subdirectory("704_SignedDistance")
-#   add_subdirectory("705_MarchingCubes")
-#   if(LIBIGL_WITH_EMBREE)
-#     add_subdirectory("706_FacetOrientation")
-#   endif()
-#   add_subdirectory("707_SweptVolume")
-#   add_subdirectory("708_Picking")
-#   add_subdirectory("709_SLIM")
+  add_subdirectory("701_Statistics")
+  add_subdirectory("702_WindingNumber")
+  add_subdirectory("703_Decimation")
+  add_subdirectory("704_SignedDistance")
+  add_subdirectory("705_MarchingCubes")
+  if(LIBIGL_WITH_EMBREE)
+    add_subdirectory("706_FacetOrientation")
+  endif()
+  add_subdirectory("707_SweptVolume")
+  add_subdirectory("708_Picking")
+  add_subdirectory("709_SLIM")
   add_subdirectory("710_SCAF")
-#   add_subdirectory("711_Subdivision")
-#   add_subdirectory("712_DataSmoothing")
-#   add_subdirectory("713_ShapeUp")
-#   if(LIBIGL_WITH_TETGEN)
-#     add_subdirectory("714_MarchingTets")
-#   endif()
-#   add_subdirectory("715_MeshImplicitFunction")
-#   add_subdirectory("716_HeatGeodesics")
-#   if(LIBIGL_WITH_CGAL)
-#     add_subdirectory("717_FastWindingNumber")
-#   endif()
-#   add_subdirectory("718_IterativeClosestPoint")
+  add_subdirectory("711_Subdivision")
+  add_subdirectory("712_DataSmoothing")
+  add_subdirectory("713_ShapeUp")
+  if(LIBIGL_WITH_TETGEN)
+    add_subdirectory("714_MarchingTets")
+  endif()
+  add_subdirectory("715_MeshImplicitFunction")
+  add_subdirectory("716_HeatGeodesics")
+  add_subdirectory("718_IterativeClosestPoint")
 endif()
